# ProjectTemplateCPP

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Readme.md
src/: main.cpp
src/Computer/: CMakeLists.txt  Computer.cpp  Computer.hpp
test/: CMakeLists.txt  test.cpp
